<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.univocity</groupId>
	<artifactId>csv-parsers-comparison</artifactId>
	<version>1.1</version>
	<name>csv-parsers-comparison</name>

	<description>A comparison among different CSV parsers for Java</description>

	<organization>
		<name>uniVocity Software Pty Ltd</name>
		<url>www.univocity.com</url>
	</organization>

	<url>http://github.com/uniVocity/csv-parsers-comparison</url>

	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>A business-friendly OSS license</comments>
		</license>
	</licenses>


	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/uniVocity/csv-parsers-comparison/issues</url>
	</issueManagement>

	<scm>
		<url>https://github.com/uniVocity/csv-parsers-comparison</url>
		<connection>scm:git:git://github.com/uniVocity/csv-parsers-comparison.git</connection>
		<developerConnection>scm:git:git@github.com:uniVocity/csv-parsers-comparison.git</developerConnection>
	</scm>

	<developers>
		<developer>
			<id>jbax</id>
			<name>Jeronimo Backes</name>
			<email>jbax@univocity.com</email>
			<timezone>+9:30</timezone>
		</developer>

		<developer>
			<id>dev</id>
			<name>uniVocity development team</name>
			<email>dev@univocity.com</email>
		</developer>

        <developer>
            <id>nkiesel</id>
            <name>Norbert Kiesel</name>
            <email>nkiesel@metricstream.com</email>
            <url>https://github.com/nkiesel</url>
        </developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
                    <release>11</release>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<configuration>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
							</excludes>
						</filter>
					</filters>
					<transformers>
						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>com.univocity.articles.csvcomparison.PerformanceComparison</mainClass>
						</transformer>
						<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
							<resource>META-INF/LICENSE-2.0.html</resource>
							<file>LICENSE-2.0.html</file>
						</transformer>
						<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
							<resource>META-INF/README.md</resource>
							<file>README.md</file>
						</transformer>
						<transformer implementation="org.apache.maven.plugins.shade.resource.IncludeResourceTransformer">
							<resource>correctness.csv</resource>
							<file>correctness.csv</file>
						</transformer>
					</transformers>
					<shadedArtifactAttached>true</shadedArtifactAttached>
					<shadedClassifierName>uber</shadedClassifierName>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>com.univocity</groupId>
			<artifactId>univocity-parsers</artifactId>
			<version>2.9.1</version>
		</dependency>

		<dependency>
			<groupId>org.csveed</groupId>
			<artifactId>csveed</artifactId>
			<version>0.7.3</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.9.0</version>
		</dependency>

		<dependency>
			<groupId>net.sf.flatpack</groupId>
			<artifactId>flatpack</artifactId>
			<version>4.0.18</version>
		</dependency>

		<dependency>
			<groupId>net.sf.supercsv</groupId>
			<artifactId>super-csv</artifactId>
			<version>2.4.0</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.jcsv</groupId>
			<artifactId>jcsv</artifactId>
			<version>1.4.0</version>
		</dependency>


		<dependency>
			<groupId>net.sourceforge.javacsv</groupId>
			<artifactId>javacsv</artifactId>
			<version>2.0</version>
		</dependency>

		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esperio-csv</artifactId>
			<version>8.8.0</version>
		</dependency>

		<dependency>
			<groupId>br.com.objectos</groupId>
			<artifactId>way-io</artifactId>
			<version>2.1.0</version>
		</dependency>

		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.6</version>
		</dependency>

		<dependency>
			<groupId>genjava</groupId>
			<artifactId>gj-csv</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>net.quux00.simplecsv</groupId>
			<artifactId>simplecsv</artifactId>
			<version>2.1</version>
		</dependency>

		<dependency>
			<groupId>org.jdom</groupId>
			<artifactId>jdom</artifactId>
			<version>2.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.beanio</groupId>
			<artifactId>beanio</artifactId>
			<version>2.1.0</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-csv</artifactId>
			<version>2.13.3</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.13.3</version>
		</dependency>

		<dependency>
			<groupId>org.simpleflatmapper</groupId>
			<artifactId>sfm-csv</artifactId>
			<version>8.2.3</version>
		</dependency>

		<dependency>
			<groupId>org.ostermiller</groupId>
			<artifactId>utils</artifactId>
			<version>1.07.00</version>
		</dependency>

		<dependency>
			<groupId>com.github.marklister</groupId>
			<artifactId>product-collections_2.11</artifactId>
			<version>1.4.5</version>
		</dependency>

	</dependencies>

</project>
